feat: add direct oss upload (#8)
* feat: add oss upload

* feat: add oss upload
